2008-06-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-submit-form-safety-check): New user option.  Suggested by
	Dan Jacobson <jidanni@jidanni.org>.
	(w3m-submit-form): Use it.

2008-06-12  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-auto-show): Scrool horizontally after executing a search
	command.

2008-06-07  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-use-header-line-title): Modify the doc-string.

2008-06-06  Naohiro Aota  <nao.aota@gmail.com>

	* w3m.el (w3m-select-buffer): Don't delete other windows.

	* w3m-filter.el (w3m-filter-wikipedia): New function.
	(w3m-filter-rules): Add w3m-filter-wikipedia.

2008-06-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el: Add coding cookie.

2008-06-02  Naohiro Aota  <nao.aota@gmail.com>

	* w3m.el (w3m-detect-meta-charset): Use also ';' as delimiter.

2008-05-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-examine-command-line-args): Treat the null string given
	as a url in the command line args as `w3m-home-page' or "about:".

2008-05-28  Naohiro Aota  <nao.aota@gmail.com>

	* doc/emacs-w3m.texi (Inline Images): Update.

	* doc/emacs-w3m-ja.texi (Inline Images): Ditto.

2008-05-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-url-readable-string): Don't decode url if it looks not to
	have been encoded.
	(w3m-current-longest-line): New variable.
	(w3m-set-current-longest-line): New function.
	(w3m-scroll-left, w3m-shift-left): Don't scroll the window endlessly;
	beep if the window can't be scrolled any more.
	(w3m-scroll-right, w3m-shift-right): Beep if the window can't be
	scrolled any more.

2008-05-25  Naohiro Aota  <nao.aota@gmail.com>

	* w3m.el (w3m-relationship-estimate-rules): Fix regexp for Google
	search within EmacsWiki.

2008-05-20  Naohiro Aota  <nao.aota@gmail.com>

	* README: Add information about how to create `configure' script.

	* README.ja: Ditto.

	* w3m.el (w3m-goto-url): Delayed encoding of fragment part.

2008-05-18  Naohiro Aota  <nao.aota@gmail.com>
